# SIF1015

./: .gitignore  CMakeLists.txt  README.md
TP1/: CMakeLists.txt
TP1/src/: Makefile  gestionLinkedINFO.c  gestionLinkedINFO_MAIN.c  gestionListeChaineeLinkedINFO.c  gestionListeChaineeLinkedINFO.h
TP2/: CMakeLists.txt
TP2-Client/: CMakeLists.txt
TP2-Client/src/: transTest.txt
TP2-Serveur/src/: trans3.txt
TP2/client/: CMakeLists.txt
TP2/client/src/: Screen.c  Screen.h  ScreenDimensions.c  ScreenDimensions.h  User.c  User.h  client.c  client.h  main  main.c  screen_dimensions.c  screen_dimensions.h
TP2/client_ncurses/: CMakeLists.txt
TP2/client_ncurses/src/: client.h  main.c  screen.c  screen.h  user.c  user.h
TP2/client_qt/: Client.pro  Client.pro.user.667f35d  basecontroller.cpp  basecontroller.h  fifo.cpp  fifo.h  loginscreen.cpp  loginscreen.h  loginscreen.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagableinterface.h  receptioncontroller.cpp  receptioncontroller.h  style.qss  transaction.cpp  transaction.h  transmissioncontroller.cpp  transmissioncontroller.h  user.cpp  user.h
TP2/server/: CMakeLists.txt
TP2/server/src/: Makefile  client.c  gestionLinkedINFO.c  gestionLinkedINFO_MAIN.c  handleTransaction.c  handleTransaction.h  linkedList.c  linkedList.h  server  server.c  server.h
TP2/server_c/: CMakeLists.txt
TP2/server_c/src/: client.c  client.h  handleTransaction.c  handleTransaction.h  linkedList.c  main.c  server.c  server.h
TP2Client/: CMakeLists.txt
TP2Client/src/: User.h
TP2Server/: CMakeLists.txt
TP3/: CMakeLists.txt
TP3/client/: CMakeLists.txt
TP3/client/src/: client.c  client2.c
TP3/server/: CMakeLists.txt
TP3/server/src/: data.txt  server.c  server2.c
TP3_LinkedINFO/: CMakeLists.txt  serveur
TP3_LinkedINFO/client/: CMakeLists.txt
TP3_LinkedINFO/client/src/: client.c  screen.c
TP3_LinkedINFO/server/: CMakeLists.txt
TP3_LinkedINFO/server/src/: gestionLinkedINFO.c  gestionListeChaineeLinkedINFO.c  gestionListeChaineeLinkedINFO.h  server.c
_archives/GoodCounter/: CMakeLists.txt  goodcounter.c
_archives/TP1/: CMakeLists.txt
_archives/TP1/src/: gestionLinkedINFO_MAIN
_archives/TP2Client/: README.md
_archives/TP2Client/src/: ScreenDimensions.c  main.c
_archives/TP2Server/src/: linkedList.h  main.c
base_project/: Makefile  gestionCHAT.c  gestionCHAT_MAIN.c  gestionLinkedINFO.c  gestionLinkedINFO_MAIN  gestionLinkedINFO_MAIN.c  gestionListeChaineeCHAT.c  gestionListeChaineeCHAT.h  gestionListeChaineeLinkedINFO.c  gestionListeChaineeLinkedINFO.c~  gestionListeChaineeLinkedINFO.h  trans1-A16Copy.txt  trans1.txt  trans1COPY.txt  trans2.txt  trans3.txt  transTest.txt
exempleLinkedINFO-A16/: Makefile  gestionLinkedINFO.c  gestionLinkedINFO_MAIN  gestionListeChaineeLinkedINFO.c~  trans1-A16Copy.txt  trans1.txt  trans1.txt.bak  trans1.txt~  trans1COPY.txt~
src/: .gitignore  file_manager.c  file_manager.h  linked_list.c  linked_list.h  main.c  main.h  makefile  member.c  member.h  member_info.c  member_info.h  trans2.txt
